{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 94,
  "lineage": "09a3b912-81c8-e372-77ee-3cb3eb0dee3d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/regions/europe-west1/networkEndpointGroups/neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-12-04T23:41:27.879-08:00",
            "enable_cdn": false,
            "fingerprint": "qteejfAkHiE=",
            "id": "projects/cloudcoursesdu/global/backendServices/lb-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "lb-backend-service",
            "port_name": "http",
            "project": "cloudcoursesdu",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/global/backendServices/lb-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_cloud_run_service.run_service",
            "google_compute_region_network_endpoint_group.cloudrun_neg",
            "google_project_service.enabled_services",
            "google_redis_instance.cache",
            "google_vpc_access_connector.connector"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.149.44.254",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-12-04T23:26:49.431-08:00",
            "id": "projects/cloudcoursesdu/global/addresses/backend-lb-address",
            "name": "backend-lb-address",
            "prefix_length": 0,
            "project": "cloudcoursesdu",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/global/addresses/backend-lb-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "website",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.111.241.99",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-12-04T23:26:49.497-08:00",
            "id": "projects/cloudcoursesdu/global/addresses/website-lb-ip",
            "name": "website-lb-ip",
            "prefix_length": 0,
            "project": "cloudcoursesdu",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/global/addresses/website-lb-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/cloudcoursesdu/global/forwardingRules/backend-lb",
            "ip_address": "34.149.44.254",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "backend-lb",
            "port_range": "443",
            "project": "cloudcoursesdu",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/global/forwardingRules/backend-lb",
            "target": "projects/cloudcoursesdu/global/targetHttpsProxies/backend-https-proxy"
          },
          "dependencies": [
            "google_cloud_run_service.run_service",
            "google_compute_backend_service.default",
            "google_compute_global_address.backend",
            "google_compute_managed_ssl_certificate.website",
            "google_compute_region_network_endpoint_group.cloudrun_neg",
            "google_compute_target_https_proxy.default",
            "google_compute_url_map.backend",
            "google_dns_record_set.backend",
            "google_dns_record_set.website",
            "google_project_service.enabled_services",
            "google_redis_instance.cache",
            "google_vpc_access_connector.connector"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/cloudcoursesdu/global/forwardingRules/website-forwarding-rule",
            "ip_address": "34.111.241.99",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "website-forwarding-rule",
            "port_range": "443",
            "project": "cloudcoursesdu",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/global/forwardingRules/website-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/global/targetHttpsProxies/website-target-proxy"
          },
          "dependencies": [
            "google_compute_global_address.website",
            "google_compute_managed_ssl_certificate.website",
            "google_compute_target_https_proxy.website",
            "google_compute_url_map.website",
            "google_dns_record_set.backend",
            "google_dns_record_set.website"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https_redirect_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/cloudcoursesdu/global/forwardingRules/backend-lb-http",
            "ip_address": "34.149.44.254",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "backend-lb-http",
            "port_range": "80",
            "project": "cloudcoursesdu",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/global/forwardingRules/backend-lb-http",
            "target": "projects/cloudcoursesdu/global/targetHttpProxies/backend-http-proxy"
          },
          "dependencies": [
            "google_compute_global_address.backend",
            "google_compute_target_http_proxy.https_redirect_backend",
            "google_compute_url_map.https_redirect_backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https_redirect_website",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/cloudcoursesdu/global/forwardingRules/frontend-lb-http",
            "ip_address": "34.111.241.99",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "frontend-lb-http",
            "port_range": "80",
            "project": "cloudcoursesdu",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/global/forwardingRules/frontend-lb-http",
            "target": "projects/cloudcoursesdu/global/targetHttpProxies/frontend-http-proxy"
          },
          "dependencies": [
            "google_compute_global_address.website",
            "google_compute_target_http_proxy.https_redirect_website",
            "google_compute_url_map.https_redirect_website"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "https_redirect_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-04T23:27:01.209-08:00",
            "id": "projects/cloudcoursesdu/global/targetHttpProxies/backend-http-proxy",
            "name": "backend-http-proxy",
            "project": "cloudcoursesdu",
            "proxy_bind": false,
            "proxy_id": 2550619202950013866,
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/global/targetHttpProxies/backend-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/global/urlMaps/backend-https-redirect"
          },
          "dependencies": [
            "google_compute_url_map.https_redirect_backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "https_redirect_website",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-04T23:27:01.429-08:00",
            "id": "projects/cloudcoursesdu/global/targetHttpProxies/frontend-http-proxy",
            "name": "frontend-http-proxy",
            "project": "cloudcoursesdu",
            "proxy_bind": false,
            "proxy_id": 8584755642003104682,
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/global/targetHttpProxies/frontend-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/global/urlMaps/frontend-https-redirect"
          },
          "dependencies": [
            "google_compute_url_map.https_redirect_website"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-04T23:42:01.657-08:00",
            "id": "projects/cloudcoursesdu/global/targetHttpsProxies/backend-https-proxy",
            "name": "backend-https-proxy",
            "project": "cloudcoursesdu",
            "proxy_bind": false,
            "proxy_id": 4298201641475120678,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/global/targetHttpsProxies/backend-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/global/sslCertificates/website-cert"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/global/urlMaps/backend-urlmap"
          },
          "dependencies": [
            "google_cloud_run_service.run_service",
            "google_compute_backend_service.default",
            "google_compute_managed_ssl_certificate.website",
            "google_compute_region_network_endpoint_group.cloudrun_neg",
            "google_compute_url_map.backend",
            "google_dns_record_set.backend",
            "google_dns_record_set.website",
            "google_project_service.enabled_services",
            "google_redis_instance.cache",
            "google_vpc_access_connector.connector"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "website",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-04T23:41:28.154-08:00",
            "id": "projects/cloudcoursesdu/global/targetHttpsProxies/website-target-proxy",
            "name": "website-target-proxy",
            "project": "cloudcoursesdu",
            "proxy_bind": false,
            "proxy_id": 4889208631966309959,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/global/targetHttpsProxies/website-target-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/global/sslCertificates/website-cert"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/global/urlMaps/website-url-map"
          },
          "dependencies": [
            "google_compute_managed_ssl_certificate.website",
            "google_compute_url_map.website",
            "google_dns_record_set.backend",
            "google_dns_record_set.website"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-04T23:41:49.891-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/global/backendServices/lb-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "cs-BGLyAcmE=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/cloudcoursesdu/global/urlMaps/backend-urlmap",
            "map_id": 2129711252595809874,
            "name": "backend-urlmap",
            "path_matcher": [],
            "project": "cloudcoursesdu",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/global/urlMaps/backend-urlmap",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_cloud_run_service.run_service",
            "google_compute_backend_service.default",
            "google_compute_region_network_endpoint_group.cloudrun_neg",
            "google_project_service.enabled_services",
            "google_redis_instance.cache",
            "google_vpc_access_connector.connector"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https_redirect_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-04T23:26:49.470-08:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "jBJyeOxuQwo=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/cloudcoursesdu/global/urlMaps/backend-https-redirect",
            "map_id": 658804529900299222,
            "name": "backend-https-redirect",
            "path_matcher": [],
            "project": "cloudcoursesdu",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/global/urlMaps/backend-https-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https_redirect_website",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-04T23:26:49.605-08:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "mXY9RaZ9NXg=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/cloudcoursesdu/global/urlMaps/frontend-https-redirect",
            "map_id": 6053786776598750166,
            "name": "frontend-https-redirect",
            "path_matcher": [],
            "project": "cloudcoursesdu",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/global/urlMaps/frontend-https-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "website",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-04T23:27:01.335-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/global/backendBuckets/website-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "RoLAg2qn9T4=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/cloudcoursesdu/global/urlMaps/website-url-map",
            "map_id": 1328920561671218090,
            "name": "website-url-map",
            "path_matcher": [],
            "project": "cloudcoursesdu",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloudcoursesdu/global/urlMaps/website-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_bucket.website",
            "google_storage_bucket.website"
          ]
        }
      ]
    }
  ]
}